Migrated license verify endpoint to tsoa
